# VSee_backend

./: Dockerfile  Makefile  pyproject.toml
backend/: __init__.py  database.py
backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/api/: __init__.py  main.py  utils.py
backend/model/: __init__.py  main.py
backend/templates/: index.html
sql/: data.sql  schema.sql
var/: backend.sqlite3
var/logs/: 04-54-15.txt  05-11-49.txt  05-21-22.txt  05-28-15.txt  05-29-45.txt  05-31-38.txt  05-33-11.txt  05-33-13.txt  05-42-22.txt  05-43-00.txt  05-50-11.txt  06-00-47.txt  06-18-43.txt  06-24-03.txt  06-29-12.txt  06-34-11.txt  06-37-46.txt  06-46-22.txt  07-14-32.txt  07-24-35.txt  07-25-55.txt  08-29-45.txt  08-36-49.txt  08-48-47.txt  08-50-02.txt  09-16-53.txt  09-17-39.txt  09-24-06.txt  09-24-46.txt  09-29-19.txt  09-35-01.txt  09-43-12.txt  09-45-01.txt  10-04-19.txt  10-08-35.txt  10-09-17.txt  10-50-19.txt  10-51-30.txt  11-00-46.txt  11-02-20.txt  (+8 more)
